# vehicles

./: left.csv  readme.md  right.csv
anapaul_python/: main.py
david_csharp/: david_csharp.sln
david_csharp/david_csharp/: Program.cs  readme.md
generate_data/: Cargo.toml  readme.md  samples.txt
generate_data/src/: main.rs
