[package]
name = "generate_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = [] }
rand = { version = "0.8.5", features = [] }
rand_chacha = "0.3.1"
indexmap = { version = "2.1.0", features = [] }
